# codelab

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  addressbook.proto  bazel-bin  bazel-codelab  bazel-out  bazel-testlogs  go.mod  go.sum  listpeople.go
github.com/jimmyok/codelab/protobuf/: BUILD.bazel  addressbook.pb.go
proto/: BUILD.bazel  addressbook.proto
protobuf/: BUILD.bazel  WORKSPACE  addressbook.proto  bazel-bin  bazel-out  bazel-protobuf  bazel-testlogs  go.sum  listpeople.go
protobuf/proto/: BUILD.bazel  addressbook.proto
