load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jimmyok/codelab/proto
gazelle(name = "gazelle")

proto_library(
    name = "addressbook_proto",
    srcs = ["addressbook.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "addressbook_go_proto",
    importpath = "github.com/jimmyok/codelab/proto/addressbook",
    proto = ":addressbook_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "addressbook",
    embed = [":addressbook_go_proto"],
    importpath = "github.com/jimmyok/codelab/proto/addressbook",
    visibility = ["//visibility:public"],
)
