load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "tutorial_proto",
    srcs = ["addressbook.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "tutorial_go_proto",
    importpath = "github.com/jimmyok/codelab/protobuf",
    proto = ":tutorial_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["listpeople.go"],
    embed = [":tutorial_go_proto"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jimmyok_codelab//protobuf/examples/tutorial:go_default_library",
    ],
)

go_binary(
    name = "protobuf",
    embed = [":protobuf_lib"],
    visibility = ["//visibility:public"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jimmyok/codelab/protobuf
gazelle(name = "gazelle")

go_library(
    name = "protobuf_lib",
    srcs = ["listpeople.go"],
    embed = [":tutorial_go_proto"],
    importpath = "github.com/jimmyok/codelab/protobuf",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jimmyok_codelab//protobuf/tutorial:go_default_library",
    ],
)
