load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protobuf",
    srcs = ["addressbook.pb.go"],
    importpath = "github.com/jimmyok/codelab/github.com/jimmyok/codelab/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
